# IndiaNavi_Converter

./: .gitignore  README.md  TODO.md  api.py  database.py  download.py  epd5in65f.py  gen_splash.py  gpx_converter.py  indianavi  pal.py  palette_image.py  raw2c.py  requirements.txt  simulator  sq_loader.py  tile_loader.py  track.gpx
.github/workflows/: generate_tiles.yml
SD_CARD/: OTA  TIMEZONE  WIFI
rust/dl/: .gitignore  Cargo.toml
rust/dl/indianavi_gpx_loader/: Cargo.toml
rust/dl/indianavi_gpx_loader/src/: lib.rs
rust/dl/indianavi_map_color/: Cargo.toml
rust/dl/src/: main.rs
rust/indianavi_map_color/src/: lib.rs
rust/tileconverter/: Cargo.toml
rust/tileconverter/src/: main.rs
webservice/: __init__.py  api.py  download.py  gpx_converter.py  pal.py  uwsgi.ini
