[package]
name = "dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
tempfile = "3.3.0"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
image = "0.24.4"
num-integer = "0.1.45"
futures = "*"
downloader = "0.2.7"
